--- a/app/src/main/res/layout/activity_actividad__registrar.xml
+++ b/app/src/main/res/layout/activity_actividad__registrar.xml
@@ -4,140 +4,168 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo"
     tools:context="com.example.usuario.virtual_fitness.Actividad_Registrar">
 
     <RelativeLayout
         android:layout_width="368dp"
         android:layout_height="495dp"
-        android:background="@drawable/fondo"
-        tools:layout_editor_absoluteX="9dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
         tools:layout_editor_absoluteY="8dp">
 
-        <EditText
-            android:id="@+id/edt_Nombre"
+        <RelativeLayout
+            android:id="@+id/relativeLayout6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="22dp"
-            android:layout_marginRight="22dp"
-            android:layout_marginTop="27dp"
-            android:ems="10"
-            android:inputType="textPersonName" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="49dp"
+            android:background="@drawable/fondo_pregunta"
+            tools:layout_editor_absoluteX="9dp"
+            tools:layout_editor_absoluteY="8dp">
 
-        <TextView
-            android:id="@+id/textView"
+            <EditText
+                android:id="@+id/edt_Nombre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="22dp"
+                android:layout_marginStart="22dp"
+                android:layout_toEndOf="@+id/textView5"
+                android:layout_toRightOf="@+id/textView5"
+                android:ems="10"
+                android:inputType="textPersonName" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/edt_Nombre"
+                android:layout_alignBottom="@+id/edt_Nombre"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
+                android:text="NOMBRE" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/textView"
+                android:layout_alignStart="@+id/textView"
+                android:layout_below="@+id/edt_Nombre"
+                android:layout_marginTop="40dp"
+                android:text="Apellidos" />
+
+            <EditText
+                android:id="@+id/edt_Apellidos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/textView2"
+                android:layout_alignBottom="@+id/textView2"
+                android:layout_alignLeft="@+id/edt_Nombre"
+                android:layout_alignStart="@+id/edt_Nombre"
+                android:ems="10"
+                android:inputType="textPersonName" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/edt_Correo"
+                android:layout_alignLeft="@+id/textView2"
+                android:layout_alignStart="@+id/textView2"
+                android:text="Correo" />
+
+            <EditText
+                android:id="@+id/edt_Correo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/edt_Apellidos"
+                android:layout_alignRight="@+id/edt_Apellidos"
+                android:layout_below="@+id/edt_Apellidos"
+                android:layout_marginTop="14dp"
+                android:ems="10"
+                android:inputType="textEmailAddress" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/textView4"
+                android:layout_alignStart="@+id/textView4"
+                android:layout_below="@+id/textView4"
+                android:layout_marginTop="33dp"
+                android:text="Contraseña" />
+
+            <EditText
+                android:id="@+id/edt_Contrasena"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/textView5"
+                android:layout_alignLeft="@+id/edt_Correo"
+                android:layout_alignStart="@+id/edt_Correo"
+                android:ems="10"
+                android:inputType="textPassword" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/textView5"
+                android:layout_alignLeft="@+id/textView5"
+                android:layout_alignRight="@+id/textView5"
+                android:layout_alignStart="@+id/textView5"
+                android:layout_below="@+id/textView5"
+                android:layout_marginTop="38dp"
+                android:text="Confirmar contraseña" />
+
+            <EditText
+                android:id="@+id/edt_ConfirContrasena"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/textView6"
+                android:layout_alignBottom="@+id/textView6"
+                android:layout_alignLeft="@+id/edt_Contrasena"
+                android:layout_alignStart="@+id/edt_Contrasena"
+                android:ems="10"
+                android:inputType="textPassword" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/edt_Nombre"
-            android:layout_alignBottom="@+id/edt_Nombre"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="29dp"
-            android:layout_marginStart="29dp"
-            android:text="NOMBRE" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView"
-            android:layout_alignStart="@+id/textView"
-            android:layout_below="@+id/edt_Nombre"
-            android:layout_marginTop="40dp"
-            android:text="Apellidos" />
-
-        <EditText
-            android:id="@+id/edt_Apellidos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView2"
-            android:layout_alignBottom="@+id/textView2"
-            android:layout_alignLeft="@+id/edt_Nombre"
-            android:layout_alignStart="@+id/edt_Nombre"
-            android:ems="10"
-            android:inputType="textPersonName" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/edt_Correo"
-            android:layout_alignLeft="@+id/textView2"
-            android:layout_alignStart="@+id/textView2"
-            android:text="Correo" />
-
-        <EditText
-            android:id="@+id/edt_Correo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/edt_Apellidos"
-            android:layout_alignRight="@+id/edt_Apellidos"
-            android:layout_below="@+id/edt_Apellidos"
-            android:layout_marginTop="14dp"
-            android:ems="10"
-            android:inputType="textEmailAddress" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView4"
-            android:layout_alignStart="@+id/textView4"
-            android:layout_centerVertical="true"
-            android:text="Contraseña" />
-
-        <EditText
-            android:id="@+id/edt_Contrasena"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/textView5"
-            android:layout_alignLeft="@+id/edt_Correo"
-            android:layout_alignStart="@+id/edt_Correo"
-            android:ems="10"
-            android:inputType="textPassword" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/textView5"
-            android:layout_alignLeft="@+id/textView5"
-            android:layout_alignRight="@+id/textView5"
-            android:layout_alignStart="@+id/textView5"
-            android:layout_below="@+id/textView5"
             android:layout_marginTop="38dp"
-            android:text="Confirmar contraseña" />
+            android:layout_below="@+id/relativeLayout6"
+            android:layout_centerHorizontal="true">
 
-        <EditText
-            android:id="@+id/edt_ConfirContrasena"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/btn_Guardar"
-            android:layout_alignLeft="@+id/edt_Contrasena"
-            android:layout_alignStart="@+id/edt_Contrasena"
-            android:ems="10"
-            android:inputType="textPassword" />
+            <Button
+                android:id="@+id/btn_Cancelar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/btn_Guardar"
+                android:layout_alignBottom="@+id/btn_Guardar"
+                android:layout_marginLeft="63dp"
+                android:layout_marginStart="63dp"
+                android:layout_toEndOf="@+id/btn_Guardar"
+                android:layout_toRightOf="@+id/btn_Guardar"
+                android:text="Cancelar" />
 
-        <Button
-            android:id="@+id/btn_Guardar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView6"
-            android:layout_marginTop="43dp"
-            android:layout_toLeftOf="@+id/edt_ConfirContrasena"
-            android:layout_toStartOf="@+id/edt_ConfirContrasena"
-            android:text="Registrar" />
-
-        <Button
-            android:id="@+id/btn_Cancelar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/btn_Guardar"
-            android:layout_alignBottom="@+id/btn_Guardar"
-            android:layout_alignEnd="@+id/edt_ConfirContrasena"
-            android:layout_alignRight="@+id/edt_ConfirContrasena"
-            android:text="Cancelar" />
+            <Button
+                android:id="@+id/btn_Guardar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:text="Registrar" />
+        </RelativeLayout>
     </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
